--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -1,28 +1,6 @@
-@font-face {
-    font-family: mongoose;
-    src: url('../../assests/Fontspring-DEMO-mongoose-regular.otf') format('truetype');
-    font-weight: normal;
-}
-@font-face {
-    font-family: mongoose;
-    src: url('../../assests/Fontspring-DEMO-mongoose-bold.otf') format('truetype');
-    font-weight: bold;
-}
-@font-face {
-    font-family: mongoose;
-    src: url('../../assests/Fontspring-DEMO-mongoose-medium.otf') format('truetype');
-    font-weight: light;
-}
-@font-face {
-    font-family: mongoose;
-    src: url('../../assests/Fontspring-DEMO-mongoose-light.otf') format('truetype');
-    font-weight: lighter;
-}
 body{
-    background-color: #f6d8ae8d;}
-
-.body{
-    padding: 0 5%;
+    background-color: var(--primary-bg);
+    
 }
 
 .home-text p{
@@ -37,7 +15,7 @@ body{
     font-weight: bold;
 }
 .home-title h1{
-    font-family: mongoose;
+    font-family: var(--header-font);
     font-size: 12vw;
     color: #f92e2d ;
     font-weight: bold;
